test/langtools/tools/javac/classreader/8219810/BadFieldFlagsTest.out
BadFieldFlagsTest.java:10:32: compiler.err.cant.access: BadFieldFlags, (compiler.misc.bad.class.file.header: BadFieldFlags.class, (compiler.misc.illegal.flag.combo: 0x0006, field, my_field))
1 error
